# Inverted-Pendulum_SFMLv3.0

./: CMakeLists.txt  README.md
game/: main.cpp
src/: main.cpp  riccati_solver.h
